[gd_scene load_steps=8 format=3 uid="uid://ca6hna2d0mqb4"]

[ext_resource type="FontFile" uid="uid://ckc3jpk6yiff1" path="res://Assets/Fonts/Comicoro.ttf" id="1_6llro"]
[ext_resource type="Script" path="res://Systems/Journal/Page.gd" id="1_rlvic"]
[ext_resource type="Texture2D" uid="uid://ckl7e85ksp8ff" path="res://Systems/Journal/Art/ICON (REFRESH).png" id="2_2w11j"]
[ext_resource type="Texture2D" uid="uid://dcthb3k5bodg" path="res://Systems/Journal/Art/ICON (SUBMIT).png" id="2_66j2j"]
[ext_resource type="Texture2D" uid="uid://bqntp8gsuhgx" path="res://Systems/Journal/Art/ICON(UNDO).png" id="2_rxihg"]

[sub_resource type="LabelSettings" id="LabelSettings_4y5pc"]
line_spacing = 0.0
font = ExtResource("1_6llro")
font_size = 40
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qce03"]

[node name="Page" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rlvic")

[node name="UndoButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 524.0
offset_top = 26.0
offset_right = 1044.0
offset_bottom = 546.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 0.509804, 0.443137, 1)
icon = ExtResource("2_rxihg")
flat = true

[node name="SubmitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 524.0
offset_top = 176.0
offset_right = 788.0
offset_bottom = 440.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 0.509804, 0.443137, 1)
icon = ExtResource("2_66j2j")
flat = true

[node name="RefreshButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 524.0
offset_top = 326.0
offset_right = 788.0
offset_bottom = 590.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 0.509804, 0.443137, 1)
icon = ExtResource("2_2w11j")
flat = true

[node name="NameEditor" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -406.0
offset_top = -324.0
offset_right = -22.0
offset_bottom = -268.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0.470076, 0.470076, 0.470076, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_6llro")
theme_override_font_sizes/font_size = 50
placeholder_text = "Name: ___________"
max_length = 18
flat = true

[node name="AttitudeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -406.0
offset_top = -274.0
offset_right = -151.0
offset_bottom = -224.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_6llro")
theme_override_font_sizes/font_size = 50
autowrap_mode = 3

[node name="HostileButton" type="Button" parent="AttitudeLabel"]
layout_mode = 0
offset_left = 472.0
offset_top = 156.0
offset_right = 559.0
offset_bottom = 202.0
scale = Vector2(1.5, 1.5)
theme_override_colors/font_hover_color = Color(1, 0.231373, 0.172549, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_6llro")
theme_override_font_sizes/font_size = 40
text = "Hostile"
flat = true

[node name="NeutralButton" type="Button" parent="AttitudeLabel"]
layout_mode = 0
offset_left = 646.0
offset_top = 65.0
offset_right = 742.0
offset_bottom = 111.0
scale = Vector2(1.5, 1.5)
theme_override_colors/font_hover_color = Color(1, 0.231373, 0.172549, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_6llro")
theme_override_font_sizes/font_size = 40
text = "Neutral"
flat = true

[node name="PassiveButton" type="Button" parent="AttitudeLabel"]
layout_mode = 0
offset_left = 534.0
offset_top = 352.0
offset_right = 634.0
offset_bottom = 398.0
scale = Vector2(1.5, 1.5)
theme_override_colors/font_hover_color = Color(1, 0.231373, 0.172549, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_6llro")
theme_override_font_sizes/font_size = 40
text = "Passive"
flat = true

[node name="UnpredictableButton" type="Button" parent="AttitudeLabel"]
layout_mode = 0
offset_left = 591.0
offset_top = 246.0
offset_right = 763.0
offset_bottom = 292.0
scale = Vector2(1.5, 1.5)
theme_override_colors/font_hover_color = Color(1, 0.231373, 0.172549, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_6llro")
theme_override_font_sizes/font_size = 40
text = "Unpredictable"
flat = true

[node name="AttitudeButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -406.0
offset_top = -274.0
offset_right = -271.0
offset_bottom = -218.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.984314, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_6llro")
theme_override_font_sizes/font_size = 50
text = "Attitude:"
flat = true

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -410.0
offset_top = -212.0
offset_right = -10.0
offset_bottom = -109.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_4y5pc")
autowrap_mode = 3

[node name="DescriptionButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -406.0
offset_top = -224.0
offset_right = -230.0
offset_bottom = -168.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.984314, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_6llro")
theme_override_font_sizes/font_size = 50
text = "Description"
flat = true

[node name="BehaviorLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -406.0
offset_top = -62.0
offset_right = -6.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_6llro")
theme_override_font_sizes/font_size = 40
autowrap_mode = 3

[node name="BehaviorButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -406.0
offset_top = -74.0
offset_right = -265.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.984314, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_6llro")
theme_override_font_sizes/font_size = 50
text = "Behavior"
flat = true

[node name="MethodOfDispatchLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -406.0
offset_top = 76.0
offset_right = -6.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_6llro")
theme_override_font_sizes/font_size = 40
autowrap_mode = 3

[node name="MethodOfDispatchButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -406.0
offset_top = 76.0
offset_right = -138.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.984314, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_6llro")
theme_override_font_sizes/font_size = 50
text = "Dispatch Method"
flat = true

[node name="SubTextLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 74.0
offset_top = -294.0
offset_right = 424.0
offset_bottom = -246.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_6llro")
theme_override_font_sizes/font_size = 50
text = "Description: Height"

[node name="NotesEditor" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -406.0
offset_top = 226.0
offset_right = -16.9998
offset_bottom = 394.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_placeholder_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_6llro")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_qce03")
placeholder_text = "Notes"
wrap_mode = 1
scroll_fit_content_height = true
caret_blink = true

[connection signal="pressed" from="UndoButton" to="." method="_on_undo_button_pressed"]
[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="pressed" from="AttitudeLabel/HostileButton" to="." method="_on_hostile_button_pressed"]
[connection signal="pressed" from="AttitudeLabel/NeutralButton" to="." method="_on_neutral_button_pressed"]
[connection signal="pressed" from="AttitudeLabel/PassiveButton" to="." method="_on_passive_button_pressed"]
[connection signal="pressed" from="AttitudeLabel/UnpredictableButton" to="." method="_on_unpredictable_button_pressed"]
[connection signal="pressed" from="AttitudeButton" to="." method="_on_attitude_button_pressed"]
[connection signal="pressed" from="DescriptionButton" to="." method="_on_description_button_pressed"]
[connection signal="pressed" from="BehaviorButton" to="." method="_on_behavior_button_pressed"]
[connection signal="pressed" from="MethodOfDispatchButton" to="." method="_on_method_of_dispatch_button_pressed"]
